<resources>
    <string name="app_name">Madonruoka</string>
    <string name="action_settings">Settings</string>
    <string name="food">Food</string>
    <string name="amount">Amount</string>
    <string name="extra">Notes</string>
    <string name="ate">Ate? </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="are_you_sure">Are you sure you want to delete this entry?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ate_info">Ate</string>
    <string name="didnt_eat">Didn\'t eat</string>
    <string name="info">Info:</string>
    <string name="empty">There are no entries yet.</string>

</resources>
