<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.ShowInfo">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/remove"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/date_info"
        android:layout_alignStart="@+id/date_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_info"
        android:text="@string/date"
        android:layout_alignBottom="@+id/ate_info"
        android:layout_toRightOf="@+id/ate_info"
        android:layout_toEndOf="@+id/ate_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:id="@+id/food_info"
        android:layout_below="@+id/date_info"
        android:layout_alignLeft="@+id/date_info"
        android:layout_alignStart="@+id/date_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount_info"
        android:text="@string/amount"
        android:layout_below="@+id/food_info"
        android:layout_alignLeft="@+id/food_info"
        android:layout_alignStart="@+id/food_info" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/extra_info"
        android:text="@string/extra"
        android:layout_below="@+id/amount_info"
        android:layout_alignLeft="@+id/amount_info"
        android:layout_alignStart="@+id/amount_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ate"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/ate_info"
        android:src="@drawable/ic_done_24dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>
